<resources>
    <string name="app_name">iCaptain</string>
    <string name="title_home">Offline</string>
    <string name="title_dashboard">Manual</string>
    <string name="title_notifications">Autopilot</string>
    <string name="adjust_heading"><![CDATA[<- Adjust Heading ->]]></string>
    <string name="_25">+25°</string>
    <string name="_10">+10°</string>
    <string name="_1">+1°</string>
    <string name="__1">-1°</string>
    <string name="__10">-10°</string>
    <string name="__25">-25°</string>
    <string name="turn_rudder"><![CDATA[<- Turn Rudder ->]]></string>
</resources>
